--- a/test.html
+++ b/test.html
@@ -1,47 +1,473 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Bootstrap demo</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-      </head>
+<head>
+		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
+		<link rel="stylesheet" href="css/datatables/datatables.css">
+		<script src=”//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js”></script>
+
+<script src=”//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js”></script>
+
+<script src=”//cdnjs.cloudflare.com/ajax/libs/datatables/1.9.4/jquery.dataTables.min.js”></script>
+</head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled">Disabled</a>
-              </li>
-            </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-          </div>
-        </div>
-      </nav>
+
+		<div id="wrap">
+			<div class="container">
+            <h3>A demo of Bootstrap data table</h3>
+				<table cellpadding="0" cellspacing="0" border="0" class="datatable table table-striped table-bordered">
+					<thead>
+						<tr>
+							<th>Rendering engine</th>
+							<th>Browser</th>
+							<th>Platform(s)</th>
+							<th>Engine version</th>
+							<th>CSS grade</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr class="gradeX">
+							<td>Trident</td>
+							<td>
+								Internet
+								 Explorer 
+								4.0
+								</td>
+							<td>Win 95+</td>
+							<td class="center">4</td>
+							<td class="center">X</td>
+						</tr>
+						<tr class="gradeC">
+							<td>Trident</td>
+							<td>Internet
+								 Explorer 5.0</td>
+							<td>Win 95+</td>
+							<td class="center">5</td>
+							<td class="center">C</td>
+						</tr>
+						<tr class="gradeA">
+							<td>Trident</td>
+							<td>Internet
+								 Explorer 5.5</td>
+							<td>Win 95+</td>
+							<td class="center">5.5</td>
+							<td class="center">A</td>
+						</tr>
+						<tr class="gradeA">
+							<td>Trident</td>
+							<td>Internet
+								 Explorer 6</td>
+							<td>Win 98+</td>
+							<td class="center">6</td>
+							<td class="center">A</td>
+						</tr>
+						<tr class="gradeA">
+							<td>Trident</td>
+							<td>Internet Explorer 7</td>
+							<td>Win XP SP2+</td>
+							<td class="center">7</td>
+							<td class="center">A</td>
+						</tr>
+						<tr class="gradeA">
+							<td>Trident</td>
+							<td>AOL browser (AOL desktop)</td>
+							<td>Win XP</td>
+							<td class="center">6</td>
+							<td class="center">A</td>
+						</tr>
+						<tr class="gradeA">
+							<td>Gecko</td>
+							<td>Firefox 1.0</td>
+							<td>Win 98+ / OSX.2+</td>
+							<td class="center">1.7</td>
+							<td class="center">A</td>
+						</tr>
+						<tr class="gradeA">
+							<td>Gecko</td>
+							<td>Firefox 1.5</td>
+							<td>Win 98+ / OSX.2+</td>
+							<td class="center">1.8</td>
+							<td class="center">A</td>
+						</tr>
+						<tr class="gradeA">
+							<td>Gecko</td>
+							<td>Firefox 2.0</td>
+							<td>Win 98+ / OSX.2+</td>
+							<td class="center">1.8</td>
+							<td class="center">A</td>
+						</tr>
+						<tr class="gradeA">
+							<td>Gecko</td>
+							<td>Firefox 3.0</td>
+							<td>Win 2k+ / OSX.3+</td>
+							<td class="center">1.9</td>
+							<td class="center">A</td>
+						</tr>
+						<tr class="gradeA">
+							<td>Gecko</td>
+							<td>Camino 1.0</td>
+							<td>OSX.2+</td>
+							<td class="center">1.8</td>
+							<td class="center">A</td>
+						</tr>
+						<tr class="gradeA">
+							<td>Gecko</td>
+							<td>Camino 1.5</td>
+							<td>OSX.3+</td>
+							<td class="center">1.8</td>
+							<td class="center">A</td>
+						</tr>
+						<tr class="gradeA">
+							<td>Gecko</td>
+							<td>Netscape 7.2</td>
+							<td>Win 95+ / Mac OS 8.6-9.2</td>
+							<td class="center">1.7</td>
+							<td class="center">A</td>
+						</tr>
+						<tr class="gradeA">
+							<td>Gecko</td>
+							<td>Netscape Browser 8</td>
+							<td>Win 98SE+</td>
+							<td class="center">1.7</td>
+							<td class="center">A</td>
+						</tr>
+						<tr class="gradeA">
+							<td>Gecko</td>
+							<td>Netscape Navigator 9</td>
+							<td>Win 98+ / OSX.2+</td>
+							<td class="center">1.8</td>
+							<td class="center">A</td>
+						</tr>
+						<tr class="gradeA">
+							<td>Gecko</td>
+							<td>Mozilla 1.0</td>
+							<td>Win 95+ / OSX.1+</td>
+							<td class="center">1</td>
+							<td class="center">A</td>
+						</tr>
+						<tr class="gradeA">
+							<td>Gecko</td>
+							<td>Mozilla 1.1</td>
+							<td>Win 95+ / OSX.1+</td>
+							<td class="center">1.1</td>
+							<td class="center">A</td>
+						</tr>
+						<tr class="gradeA">
+							<td>Gecko</td>
+							<td>Mozilla 1.2</td>
+							<td>Win 95+ / OSX.1+</td>
+							<td class="center">1.2</td>
+							<td class="center">A</td>
+						</tr>
+						<tr class="gradeA">
+							<td>Gecko</td>
+							<td>Mozilla 1.3</td>
+							<td>Win 95+ / OSX.1+</td>
+							<td class="center">1.3</td>
+							<td class="center">A</td>
+						</tr>
+						<tr class="gradeA">
+							<td>Gecko</td>
+							<td>Mozilla 1.4</td>
+							<td>Win 95+ / OSX.1+</td>
+							<td class="center">1.4</td>
+							<td class="center">A</td>
+						</tr>
+						<tr class="gradeA">
+							<td>Gecko</td>
+							<td>Mozilla 1.5</td>
+							<td>Win 95+ / OSX.1+</td>
+							<td class="center">1.5</td>
+							<td class="center">A</td>
+						</tr>
+						<tr class="gradeA">
+							<td>Gecko</td>
+							<td>Mozilla 1.6</td>
+							<td>Win 95+ / OSX.1+</td>
+							<td class="center">1.6</td>
+							<td class="center">A</td>
+						</tr>
+						<tr class="gradeA">
+							<td>Gecko</td>
+							<td>Mozilla 1.7</td>
+							<td>Win 98+ / OSX.1+</td>
+							<td class="center">1.7</td>
+							<td class="center">A</td>
+						</tr>
+						<tr class="gradeA">
+							<td>Gecko</td>
+							<td>Mozilla 1.8</td>
+							<td>Win 98+ / OSX.1+</td>
+							<td class="center">1.8</td>
+							<td class="center">A</td>
+						</tr>
+						<tr class="gradeA">
+							<td>Gecko</td>
+							<td>Seamonkey 1.1</td>
+							<td>Win 98+ / OSX.2+</td>
+							<td class="center">1.8</td>
+							<td class="center">A</td>
+						</tr>
+						<tr class="gradeA">
+							<td>Gecko</td>
+							<td>Epiphany 2.20</td>
+							<td>Gnome</td>
+							<td class="center">1.8</td>
+							<td class="center">A</td>
+						</tr>
+						<tr class="gradeA">
+							<td>Webkit</td>
+							<td>Safari 1.2</td>
+							<td>OSX.3</td>
+							<td class="center">125.5</td>
+							<td class="center">A</td>
+						</tr>
+						<tr class="gradeA">
+							<td>Webkit</td>
+							<td>Safari 1.3</td>
+							<td>OSX.3</td>
+							<td class="center">312.8</td>
+							<td class="center">A</td>
+						</tr>
+						<tr class="gradeA">
+							<td>Webkit</td>
+							<td>Safari 2.0</td>
+							<td>OSX.4+</td>
+							<td class="center">419.3</td>
+							<td class="center">A</td>
+						</tr>
+						<tr class="gradeA">
+							<td>Webkit</td>
+							<td>Safari 3.0</td>
+							<td>OSX.4+</td>
+							<td class="center">522.1</td>
+							<td class="center">A</td>
+						</tr>
+						<tr class="gradeA">
+							<td>Webkit</td>
+							<td>OmniWeb 5.5</td>
+							<td>OSX.4+</td>
+							<td class="center">420</td>
+							<td class="center">A</td>
+						</tr>
+						<tr class="gradeA">
+							<td>Webkit</td>
+							<td>iPod Touch / iPhone</td>
+							<td>iPod</td>
+							<td class="center">420.1</td>
+							<td class="center">A</td>
+						</tr>
+						<tr class="gradeA">
+							<td>Webkit</td>
+							<td>S60</td>
+							<td>S60</td>
+							<td class="center">413</td>
+							<td class="center">A</td>
+						</tr>
+						<tr class="gradeA">
+							<td>Presto</td>
+							<td>Opera 7.0</td>
+							<td>Win 95+ / OSX.1+</td>
+							<td class="center">-</td>
+							<td class="center">A</td>
+						</tr>
+						<tr class="gradeA">
+							<td>Presto</td>
+							<td>Opera 7.5</td>
+							<td>Win 95+ / OSX.2+</td>
+							<td class="center">-</td>
+							<td class="center">A</td>
+						</tr>
+						<tr class="gradeA">
+							<td>Presto</td>
+							<td>Opera 8.0</td>
+							<td>Win 95+ / OSX.2+</td>
+							<td class="center">-</td>
+							<td class="center">A</td>
+						</tr>
+						<tr class="gradeA">
+							<td>Presto</td>
+							<td>Opera 8.5</td>
+							<td>Win 95+ / OSX.2+</td>
+							<td class="center">-</td>
+							<td class="center">A</td>
+						</tr>
+						<tr class="gradeA">
+							<td>Presto</td>
+							<td>Opera 9.0</td>
+							<td>Win 95+ / OSX.3+</td>
+							<td class="center">-</td>
+							<td class="center">A</td>
+						</tr>
+						<tr class="gradeA">
+							<td>Presto</td>
+							<td>Opera 9.2</td>
+							<td>Win 88+ / OSX.3+</td>
+							<td class="center">-</td>
+							<td class="center">A</td>
+						</tr>
+						<tr class="gradeA">
+							<td>Presto</td>
+							<td>Opera 9.5</td>
+							<td>Win 88+ / OSX.3+</td>
+							<td class="center">-</td>
+							<td class="center">A</td>
+						</tr>
+						<tr class="gradeA">
+							<td>Presto</td>
+							<td>Opera for Wii</td>
+							<td>Wii</td>
+							<td class="center">-</td>
+							<td class="center">A</td>
+						</tr>
+						<tr class="gradeA">
+							<td>Presto</td>
+							<td>Nokia N800</td>
+							<td>N800</td>
+							<td class="center">-</td>
+							<td class="center">A</td>
+						</tr>
+						<tr class="gradeA">
+							<td>Presto</td>
+							<td>Nintendo DS browser</td>
+							<td>Nintendo DS</td>
+							<td class="center">8.5</td>
+							<td class="center">C/A<sup>1</sup></td>
+						</tr>
+						<tr class="gradeC">
+							<td>KHTML</td>
+							<td>Konqureror 3.1</td>
+							<td>KDE 3.1</td>
+							<td class="center">3.1</td>
+							<td class="center">C</td>
+						</tr>
+						<tr class="gradeA">
+							<td>KHTML</td>
+							<td>Konqureror 3.3</td>
+							<td>KDE 3.3</td>
+							<td class="center">3.3</td>
+							<td class="center">A</td>
+						</tr>
+						<tr class="gradeA">
+							<td>KHTML</td>
+							<td>Konqureror 3.5</td>
+							<td>KDE 3.5</td>
+							<td class="center">3.5</td>
+							<td class="center">A</td>
+						</tr>
+						<tr class="gradeX">
+							<td>Tasman</td>
+							<td>Internet Explorer 4.5</td>
+							<td>Mac OS 8-9</td>
+							<td class="center">-</td>
+							<td class="center">X</td>
+						</tr>
+						<tr class="gradeC">
+							<td>Tasman</td>
+							<td>Internet Explorer 5.1</td>
+							<td>Mac OS 7.6-9</td>
+							<td class="center">1</td>
+							<td class="center">C</td>
+						</tr>
+						<tr class="gradeC">
+							<td>Tasman</td>
+							<td>Internet Explorer 5.2</td>
+							<td>Mac OS 8-X</td>
+							<td class="center">1</td>
+							<td class="center">C</td>
+						</tr>
+						<tr class="gradeA">
+							<td>Misc</td>
+							<td>NetFront 3.1</td>
+							<td>Embedded devices</td>
+							<td class="center">-</td>
+							<td class="center">C</td>
+						</tr>
+						<tr class="gradeA">
+							<td>Misc</td>
+							<td>NetFront 3.4</td>
+							<td>Embedded devices</td>
+							<td class="center">-</td>
+							<td class="center">A</td>
+						</tr>
+						<tr class="gradeX">
+							<td>Misc</td>
+							<td>Dillo 0.8</td>
+							<td>Embedded devices</td>
+							<td class="center">-</td>
+							<td class="center">X</td>
+						</tr>
+						<tr class="gradeX">
+							<td>Misc</td>
+							<td>Links</td>
+							<td>Text only</td>
+							<td class="center">-</td>
+							<td class="center">X</td>
+						</tr>
+						<tr class="gradeX">
+							<td>Misc</td>
+							<td>Lynx</td>
+							<td>Text only</td>
+							<td class="center">-</td>
+							<td class="center">X</td>
+						</tr>
+						<tr class="gradeC">
+							<td>Misc</td>
+							<td>IE Mobile</td>
+							<td>Windows Mobile 6</td>
+							<td class="center">-</td>
+							<td class="center">C</td>
+						</tr>
+						<tr class="gradeC">
+							<td>Misc</td>
+							<td>PSP browser</td>
+							<td>PSP</td>
+							<td class="center">-</td>
+							<td class="center">C</td>
+						</tr>
+						<tr class="gradeU">
+							<td>Other browsers</td>
+							<td>All others</td>
+							<td>-</td>
+							<td class="center">-</td>
+							<td class="center">U</td>
+						</tr>
+					</tbody>
+					<tfoot>
+						<tr>
+							<th>Rendering engine</th>
+							<th>Browser</th>
+							<th>Platform(s)</th>
+							<th>Engine version</th>
+							<th>CSS grade</th>
+						</tr>
+					</tfoot>
+				</table>
+			</div>
+		</div>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+		<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/datatables/1.9.4/jquery.dataTables.min.js"></script>
+		<script src="js/datatables/datatables.js"></script>
+		<script type="text/javascript">
+		$(document).ready(function() {
+			$('.datatable').dataTable({
+				"sPaginationType": "bs_full"
+			});	
+			$('.datatable').each(function(){
+				var datatable = $(this);
+				// SEARCH - Add the placeholder for Search and Turn this into in-line form control
+				var search_input = datatable.closest('.dataTables_wrapper').find('div[id$=_filter] input');
+				search_input.attr('placeholder', 'Search');
+				search_input.addClass('form-control input-sm');
+				// LENGTH - Inline-Form control
+				var length_sel = datatable.closest('.dataTables_wrapper').find('div[id$=_length] select');
+				length_sel.addClass('form-control input-sm');
+			});
+		});
+		</script>
+
+
+
 </body>
 </html>
+
